# Copyright (C) 2005-23 Dr. Ralf Schlatterbeck Open Source Consulting.
# Reichergasse 131, A-3411 Weidling.
# Web: http://www.runtux.com Email: office@runtux.com
# All rights reserved
# ****************************************************************************
#
# This library is free software; you can redistribute it and/or modify
# it under the terms of the GNU Library General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Library General Public License for more details.
#
# You should have received a copy of the GNU Library General Public
# License along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
# ****************************************************************************

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "rsclib"
dynamic         = ["version"]
authors         = [{ name="Ralf Schlatterbeck", email="rsc@runtux.com" }, ]
description     = "Misc. basic stuff needed by RSCs tools"
readme          = "README.rst"
license         = {text = "GNU Library or Lesser General Public License (LGPL)"}
requires-python = '>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4'
classifiers     = [
          'Development Status :: 5 - Production/Stable'
        , 'License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)'
        , 'Operating System :: OS Independent'
        , 'Programming Language :: Python'
        , 'Intended Audience :: Developers'
        , 'Programming Language :: Python :: 2'
        , 'Programming Language :: Python :: 2.7'
        , 'Programming Language :: Python :: 3'
        , 'Programming Language :: Python :: 3.5'
        , 'Programming Language :: Python :: 3.6'
        , 'Programming Language :: Python :: 3.7'
        , 'Programming Language :: Python :: 3.8'
        , 'Programming Language :: Python :: 3.9'
        , 'Programming Language :: Python :: 3.10'
        , 'Programming Language :: Python :: 3.11'
        ]

[project.urls]
"Homepage" = "https://github.com/schlatterbeck/rsclib"
"Bug Tracker" = "https://github.com/schlatterbeck/rsclib/issues"

[project.scripts]
ast_sip_check    = "rsclib.ast_probe:sip_check"
rsclib-hexdump   = "rsclib.hexdump:hexdump_cmd"
rsclib-unhexdump = "rsclib.hexdump:unhexdump_cmd"

[tool.setuptools.dynamic]
version = {attr = "rsclib.Version.VERSION"}
